--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "graphql": "^16.9.0",
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
-    "next": "14.2.11",
-    "react": "^18",
+    "next": "^16.0.1",
+    "react": "^19.2.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.2.1",
     "react-spinners": "^0.14.1",
     "viem": "^2.19.8",
@@ -49,5 +49,6 @@
     "eslint": "^9.9.0",
     "eslint-config-next": "14.2.5",
     "typescript": "^5.5.4"
-  }
+  },
+  "packageManager": "pnpm@10.18.3+sha512.bbd16e6d7286fd7e01f6b3c0b3c932cda2965c06a908328f74663f10a9aea51f1129eea615134bf992831b009eabe167ecb7008b597f40ff9bc75946aadfb08d"
 }
