--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@paraswap/core": "^2.4.0",
-    "@tanstack/react-query": "^5.52.0",
+    "@reown/appkit": "^1.8.13",
+    "@reown/appkit-adapter-wagmi": "^1.8.13",
+    "@tanstack/react-query": "^5.90.7",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@wagmi/connectors": "^5.1.7",
     "@wagmi/core": "^2.13.4",
@@ -36,18 +38,17 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.2.1",
     "react-spinners": "^0.14.1",
-    "viem": "^2.19.8",
-    "wagmi": "^2.12.7",
+    "viem": "^2.38.6",
+    "wagmi": "^2.19.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.0",
     "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.1.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.9.0",
-    "eslint-config-next": "14.2.5",
     "typescript": "^5.5.4"
   },
   "packageManager": "pnpm@10.18.3+sha512.bbd16e6d7286fd7e01f6b3c0b3c932cda2965c06a908328f74663f10a9aea51f1129eea615134bf992831b009eabe167ecb7008b597f40ff9bc75946aadfb08d"
